feat: configured statics files in project

--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -1,4 +1,13 @@
-{% extends 'base/base.html' %} {% block 'conteudo' %}
+{% extends 'base.html' %} 
+
+{% load static %} 
+
+{% block 'cabecalho' %}
+  <link href="{% static 'usuarios/css/cadastro.css' %}" rel="stylesheet" />
+{% endblock %} 
+
+{% block 'conteudo' %}
+
 <div class="bg1">
   <div class="container">
     <div class="row">
