--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link href="{% static 'geral/css/base.css' %}" rel="stylesheet">
     <title>Study Async</title>
     {% block 'cabecalho' %} {% endblock %}
   </head>
