--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -1,12 +1,6 @@
-{% extends 'base.html' %} 
-
-{% load static %} 
-
-{% block 'cabecalho' %}
-  <link href="{% static 'usuarios/css/cadastro.css' %}" rel="stylesheet" />
-{% endblock %} 
-
-{% block 'conteudo' %}
+{% extends 'base.html' %} {% load static %} {% block 'cabecalho' %}
+<link href="{% static 'usuarios/css/cadastro.css' %}" rel="stylesheet" />
+{% endblock %} {% block 'conteudo' %}
 
 <div class="bg1">
   <div class="container">
@@ -14,7 +8,7 @@
       <div class="col-md">
         <div class="box-titulo">
           <div class="box-titulo-item">
-            <img src="" />
+            <img src="{% static 'usuarios/img/logo.png' %}" />
           </div>
           <div
             style="margin-top: auto; margin-bottom: auto"
@@ -43,7 +37,15 @@
           </div>
           <br />
           <h3>Cadastre-se</h3>
-          <form action="" method="POST">
+          
+          {% if messages %} 
+          {% for message in messages %}
+          <section class="alert {{message.tags}}">{{message}}</section>
+          {% endfor %} 
+          {% endif %}
+          
+          <form action="{% url 'cadastro_usuario' %}" method="POST">
+            {% csrf_token %}
             <label>Username</label>
             <input type="text" class="input-form" name="username" id="" />
             <br />
