--- a/templates/base.html
+++ b/templates/base.html
@@ -15,5 +15,6 @@
   <body>
     {% block 'conteudo' %}{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    {% block 'script' %}{% endblock 'script' %}
   </body>
 </html>
