--- a/flashcard/templates/desafio.html
+++ b/flashcard/templates/desafio.html
@@ -6,53 +6,65 @@
     <link href="{% static 'usuarios/css/cadastro.css' %}" rel="stylesheet">
     <link href="{% static 'flashcard/css/novo_flashcard.css' %}" rel="stylesheet">
     <link href="{% static 'flashcard/css/iniciar_desafio.css' %}" rel="stylesheet">
+    <link href="{% static 'flashcard/css/desafio.css' %}" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 {% endblock 'cabecalho' %}
 
 
 {% block 'conteudo' %}
-    <div class="container ctx">
+    <div class="container">
         <br>
         <br>
-        <h2 class="fonte-principal">Iniciar desafio</h2>
-        <p class="fonte-secundaria">Escolha as categorias e a dificuldade do desafio</p>
         <div class="row">
-            
-                <div class="col-md">
-                    <form action="{% url "iniciar_desafio" %}" method="POST">{% csrf_token%}
-                    <label for="">Titulo</label>
-                    <input type="text" class="form-control" name="titulo">
-                </div>
-                <div class="col-md">
-                    <label>Categoria</label>
-                    <select name="categoria" class="form-select" multiple>
-                        {% for categoria in categorias %}
-                            <option value="{{categoria.id}}">
-                                {{categoria.nome}}
-                            </option>
-                        {% endfor %}
-                    </select>
-                </div>
-                <div class="col-md">
-                    <label>Dificuldade</label>
-                    <select name="dificuldade" class="form-select">
-                        {% for dificuldade in dificuldades %}
-                            <option value="{{dificuldade.0}}">
-                                {{dificuldade.1}}
-                            </option>
-                        {% endfor %}
-                    </select>
-                </div>
+            <div class="col-md">
+                <h3 class="fonte-secundaria" >Desafio iniciado</h3>
+                <span class="badge-categoria">Programação</span>
+                <span class="badge-categoria" >Matemática</span>
+                <br>
+                <br>
+                <br>
+                {% for flash in desafio.flashcards.all %}
+                    <div class="box-new-flashcard">
+                        <div class="flashcard">
 
-                <div class="col-md">
-                    <label>Qtd questões</label>
-                    <input type="number" class="form-control" name="qtd_perguntas">
-                </div>
-            
+                            <div class="flashcard-categoria">
+                                {{flash.flashcard.categoria}}
+                            </div>
+                            <br>
+                            <br>
+                            <div class="flashcard-box-item" onclick="flip_card({{flash.id}})">
+                                <p class="flashcard-item">{{flash.flashcard.pergunta}}</p>
+                            </div>
+
+                            
+                            <div class="responder">
+                                <a href=""><i class='bx bxs-x-square icone-vermelho'></i></a>
+                                <a href=""><i class='bx bxs-check-square icone-verde' ></i></a>
+                            </div>
+                            
+                            
+                        </div>
+                        <div class="resposta-flashcard" id="{{flash.id}}">
+                            {{flash.flashcard.resposta}}
+                        </div>
+                    </div>
+                    <br>
+                    <br>
+                {% endfor %}
+
+            </div>
+            <div class="col-md">
+
+                <h3 class="fonte-secundaria">Resultado</h3>
+                <p class="fonte-p">Acertos: </p>
+                <p class="fonte-p">Erros: </p>
+                <p class="fonte-p">Faltantes: </p>
+                <br>
+                <a class="btn-cadastro btn-desafio" href="">Relatório detalhado</a>
+            </div>
         </div>
-        <br>
-        <br>
-        <input type="submit" class="btn-cadastro" value="Iniciar desafio">
-        </form>
+
     </div>
+    <script src="{% static 'flashcard/js/flashcard.js' %}"></script>
 {% endblock 'conteudo' %}
