feat: complemented app flashcards

--- a/flashcard/templates/listar_desafio.html
+++ b/flashcard/templates/listar_desafio.html
@@ -61,5 +61,5 @@
               </table>
         </div>
     </div>
-    <script src="{% static 'flashcard/js/flashcard.js' %}"></script>
+    <script src="{% static 'flashcard/js/display_card.js' %}"></script>
 {% endblock 'conteudo' %}
