--- a/flashcard/templates/desafio.html
+++ b/flashcard/templates/desafio.html
@@ -25,10 +25,10 @@
                 <br>
                 <br>
                 {% for flash in desafio.flashcards.all %}
-                    <div class="box-new-flashcard">
-                        <div class="flashcard">
+                    <div class="box-new-flashcard {% if flash.respondido %}op2{% endif %}">
+                        <div class="flashcard {{flash.flashcard.css_dificuldade}}">
 
-                            <div class="flashcard-categoria">
+                            <div class="flashcard-categoria ">
                                 {{flash.flashcard.categoria}}
                             </div>
                             <br>
@@ -37,11 +37,18 @@
                                 <p class="flashcard-item">{{flash.flashcard.pergunta}}</p>
                             </div>
 
-                            
-                            <div class="responder">
-                                <a href=""><i class='bx bxs-x-square icone-vermelho'></i></a>
-                                <a href=""><i class='bx bxs-check-square icone-verde' ></i></a>
-                            </div>
+                            {% if not flash.respondido %}
+                                <div class="responder">
+                                    <a href="{% url 'responder_flashcard' flash.id %}?acertou=0&desafio_id={{desafio.id}}"><i class='bx bxs-x-square icone-vermelho'></i></a>
+                                    <a href="{% url 'responder_flashcard' flash.id %}?acertou=1&desafio_id={{desafio.id}}"><i class='bx bxs-check-square icone-verde' ></i></a>
+                                </div>
+                            {% else %}
+                                {% if flash.acertou %}
+                                    <span class="badge bg-success">Acertou</span>
+                                {% else %}
+                                    <span class="badge bg-danger">Errou</span>
+                                {% endif%}
+                            {% endif %}
                             
                             
                         </div>
@@ -57,14 +64,14 @@
             <div class="col-md">
 
                 <h3 class="fonte-secundaria">Resultado</h3>
-                <p class="fonte-p">Acertos: </p>
-                <p class="fonte-p">Erros: </p>
-                <p class="fonte-p">Faltantes: </p>
+                <p class="fonte-p">Acertos:{{acertos}} </p>
+                <p class="fonte-p">Erros: {{erros}}</p>
+                <p class="fonte-p">Faltantes: {{faltantes}}</p>
                 <br>
                 <a class="btn-cadastro btn-desafio" href="">Relatório detalhado</a>
             </div>
         </div>
 
     </div>
-    <script src="{% static 'flashcard/js/flashcard.js' %}"></script>
+    <script src="{% static 'flashcard/js/display_card.js' %}"></script>
 {% endblock 'conteudo' %}
