--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,10 @@
     {% block 'cabecalho' %} {% endblock %}
   </head>
   <body>
-    {% block 'conteudo' %}{% endblock %}
+    {% include "partials/header.html" %}
+    {% block 'conteudo' %}
+    
+    {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     {% block 'script' %}{% endblock 'script' %}
   </body>
